[package]
name = "db"
version = "0.1.0"
authors = ["Johan Govers <johan@otherweb.eu>"]
workspace = "../../"

[dependencies]
diesel = { version = "1.1", features = ["mysql", "r2d2", "chrono", "large-tables"] }
# diesel_infer_schema = { version = "1.1", features = ["mysql"] }
chrono = { version = "0.4.0", features = ["serde"] } # Date and time handling
dotenv = "0.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
djangohashers = "0.3.0"
rocket = "0.3.6"